--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,44 @@
 <resources>
     <string name="app_name">LayTrax</string>
-    <string name="field_email">Email</string>
-    <string-array name="intervals_array">
-        <item>5</item>
-        <item>30</item>
-        <item>60</item>
-        <item>300</item>
-        <item>600</item>
-        <item>1800</item>
-        <item>3600</item>
-    </string-array>
-    <string name="firebase_path" translatable="false">locations</string>
+    <string name="signin_page_title">Tracking Service</string>
+    <string name="start_page_title">Tracking Service Setup</string>
+    <string name="run_page_title">Tracking Service</string>
+
+    <string name="email_label">Email</string>
+    <string name="admin_email_label">Service Administrator Email</string>
+    <string name="user_label">User</string>
+    <string name="password_label">Password</string>
+    <string name="account_label">Account</string>
+    <string name="spacing_label">MIN Footprint Separation (meters)</string>
+    <string name="interval_label">GPS Time Interval</string>
+    <string name="interval_unit_label">GPS Time Interval Unit</string>
+    <string name="minutes_unit_label">Minutes</string>
+    <string name="seconds_unit_label">Seconds</string>
+
+    <string name="service_request">Request Service Access</string>
+    <string name="send_request">Send</string>
+    <string name="return_request">Return</string>
+    <string name="signin">Sign In</string>
+    <string name="signing_in_msg">Signing In...</string>
+    <string name="service_started">Service Started</string>
+    <string name="start">Start Tracking</string>
+    <string name="running">Tracking Service is Running</string>
+    <string name="stop">Stop Tracking</string>
+    <string name="sign_out">Sign Out</string>
+
+    <string name="stopped">Tracking Stopped</string>
+    <string name="sign_in_error">Error signing in</string>
+    <string name="invalid_email">Invalid email address format</string>
+    <string name="invalid_password">Password must contain at least 8 characters</string>
+    <string name="interval_out_of_range">Time Interval is out of range</string>
+    <string name="spacing_too_small">Foorprint separation value cannot be less than </string>
+
+    <string name="instructions_text">
+        Enter email address of your service administrator to request write access to the cloud database for your email
+        account on this very device. It is up to the administrator to grant you service access. The administrator
+        must also provide you with the needed password create and reset functionality.
+    </string>
+    <string name="request_email_subject">"LayTrax Service Access Request"</string>
+    <string name="request_email_text">Please grant this sender service access for device with ID</string>
 </resources>
 
