--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,15 @@
     <string name="signin_page_title">Tracking Service</string>
     <string name="start_page_title">Tracking Service Setup</string>
     <string name="run_page_title">Tracking Service</string>
+    <string name="err_no_container">Error: No fragment container</string>
 
     <string name="email_label">Email</string>
     <string name="admin_email_label">Service Administrator Email</string>
     <string name="user_label">User</string>
     <string name="password_label">Password</string>
     <string name="account_label">Account</string>
-    <string name="spacing_label">MIN Footprint Separation (meters)</string>
+    <string name="spacing_label">MIN Recorded Step Length (meters)</string>
+    <string name="spacing_label_2">MIN Recorded Step Length</string>
     <string name="interval_label">GPS Time Interval</string>
     <string name="interval_unit_label">GPS Time Interval Unit</string>
     <string name="minutes_unit_label">Minutes</string>
@@ -31,7 +33,7 @@
     <string name="invalid_email">Invalid email address format</string>
     <string name="invalid_password">Password must contain at least 8 characters</string>
     <string name="interval_out_of_range">Time Interval is out of range</string>
-    <string name="spacing_too_small">Foorprint separation value cannot be less than </string>
+    <string name="spacing_too_small">Footprint separation value cannot be less than </string>
 
     <string name="instructions_text">
         Enter email address of your service administrator to request write access to the cloud database for your email
@@ -40,5 +42,10 @@
     </string>
     <string name="request_email_subject">"LayTrax Service Access Request"</string>
     <string name="request_email_text">Please grant this sender service access for device with ID</string>
+
+    <string name="current_user">%1$s: %2$s</string>
+    <string name="current_account">%1$s: %2$s</string>
+    <string name="current_spacing">%1$s: %2$d meters</string>
+    <string name="current_interval">%1$s: %2$d %3$s</string>
 </resources>
 
