--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="current_account">%1$s: %2$s</string>
     <string name="current_spacing">%1$s: %2$d meters</string>
     <string name="current_interval">%1$s: %2$d %3$s</string>
+    <string name="current_version">Version %1$s (build %2$d)</string>
 </resources>
 
